--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
 			<version>1.4</version>
 		</dependency>
 		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
+		</dependency>
+		<dependency>
 			<groupId>com.adms</groupId>
 			<artifactId>admsImex</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
@@ -56,6 +61,11 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-ehcache</artifactId>
 			<version>4.3.6.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>admsUtils</groupId>
+			<artifactId>admsUtils</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
