--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,17 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
 		</dependency>
+<!-- 		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-bundle</artifactId>
+			<version>2.7.6</version>
+		</dependency>
+<dependency>
+<groupId>org.springframework</groupId>
+<artifactId>spring-jms</artifactId>
+<version>3.1.0.RELEASE</version>
+<scope>compile</scope>
+</dependency> -->
 		<dependency>
 			<groupId>com.adms</groupId>
 			<artifactId>admsImex</artifactId>
@@ -71,6 +82,38 @@
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>1.6</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+						<configuration>
+							<transformers>
+								<!-- <transformer
+									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+									<mainclass>com.codevalid.App</mainclass>
+								</transformer> -->
+		
+								<transformer
+									implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+									<resource>META-INF/spring.handlers</resource>
+								</transformer>
+								<transformer
+									implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+									<resource>META-INF/spring.schemas</resource>
+								</transformer>
+		
+							</transformers>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
